// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoCard should render data correctly given there is no data in its size api call 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-91svcj-MuiPaper-root-MuiCard-root"
    >
      <button
        class="MuiButtonBase-root MuiCardActionArea-root css-1oitmrd-MuiButtonBase-root-MuiCardActionArea-root"
        tabindex="0"
        type="button"
      >
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            class="MuiTypography-root MuiTypography-h6 remote-base-card__name css-8zgow4-MuiTypography-root"
          >
            googledrive
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            Type: crypt
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            NA / NA used, NA in trash
          </p>
        </div>
        <span
          class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`InfoCard should render data correctly when api call finishes 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-91svcj-MuiPaper-root-MuiCard-root"
    >
      <button
        class="MuiButtonBase-root MuiCardActionArea-root css-1oitmrd-MuiButtonBase-root-MuiCardActionArea-root"
        tabindex="0"
        type="button"
      >
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            class="MuiTypography-root MuiTypography-h6 remote-base-card__name css-8zgow4-MuiTypography-root"
          >
            googledrive
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            Type: crypt
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            126 GB / 161 GB used, 0 B in trash
          </p>
        </div>
        <span
          class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`InfoCard should render error messages correctly when api calls fail 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-91svcj-MuiPaper-root-MuiCard-root"
    >
      <button
        class="MuiButtonBase-root MuiCardActionArea-root css-1oitmrd-MuiButtonBase-root-MuiCardActionArea-root"
        tabindex="0"
        type="button"
      >
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            class="MuiTypography-root MuiTypography-h6 remote-base-card__name css-8zgow4-MuiTypography-root"
          >
            googledrive
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            Unable to get remote details
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            Unable to get space information
          </p>
        </div>
        <span
          class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`InfoCard should render spinners when api call is in flight 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-91svcj-MuiPaper-root-MuiCard-root"
    >
      <button
        class="MuiButtonBase-root MuiCardActionArea-root css-1oitmrd-MuiButtonBase-root-MuiCardActionArea-root"
        tabindex="0"
        type="button"
      >
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            class="MuiTypography-root MuiTypography-h6 remote-base-card__name css-8zgow4-MuiTypography-root"
          >
            googledrive
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1x8pdvj-MuiSkeleton-root"
              data-testid="remote-info-skeleton"
            />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-atovpb-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1x8pdvj-MuiSkeleton-root"
              data-testid="remote-space-skeleton"
            />
          </p>
        </div>
        <span
          class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
  </div>
</body>
`;
